--- a/_posts/2020-05-07.md
+++ b/_posts/2020-05-07.md
@@ -3,7 +3,7 @@
 Here's the table of contents:
 
 1. TOC
-{:toc}
+   {:toc}
 
 ## Basic setup
 
@@ -13,11 +13,11 @@ Jekyll requires blog post files to be named according to the following format:
 
 Where `YEAR` is a four-digit number, `MONTH` and `DAY` are both two-digit numbers, and `filename` is whatever file name you choose, to remind yourself what this post is about. `.md` is the file extension for markdown files.
 
-The first line of the file should start with a single hash character, then a space, then your title. This is how you create a "*level 1 heading*" in markdown. Then you can create level 2, 3, etc headings as you wish but repeating the hash character, such as you see in the line `## File names` above.
+The first line of the file should start with a single hash character, then a space, then your title. This is how you create a "_level 1 heading_" in markdown. Then you can create level 2, 3, etc headings as you wish but repeating the hash character, such as you see in the line `## File names` above.
 
 ## Basic formatting
 
-You can use *italics*, **bold**, `code font text`, and create [links](https://www.markdownguide.org/cheat-sheet/). Here's a footnote [^1]. Here's a horizontal rule:
+You can use _italics_, **bold**, `code font text`, and create [links](https://www.markdownguide.org/cheat-sheet/). Here's a footnote [^1]. Here's a horizontal rule:
 
 ---
 
@@ -65,11 +65,10 @@ print(1+1)
 
 ## Tables
 
-| Column 1 | Column 2 |
-|-|-|
-| A thing | Another thing |
+| Column 1 | Column 2      |
+| -------- | ------------- |
+| A thing  | Another thing |
 
 ## Footnotes
 
 [^1]: This is the footnote.
-
